<resources>
    <string name="app_name">Book a Seat</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="nav_library">Library</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About</string>
    <string name="nav_orders">My Reservations</string>
    <string name="nav_opening">Opening Hours</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="reserve">Reserve</string>
    <string name="cancel">Cancel</string>
    <string name="reserve_a_seat">Reserve a Seat</string>
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="invalid_duration">Invalid duration, please make sure end time is after start time</string>
    <string name="duration_message" formatted="false">Duration: %d:%02d</string>
    <string name="free_seat_question">Do you wish to free this seat?</string>
    <string name="seat_already_reserved">Seat is already reserved for that duration. Please choose another time interval</string>
    <string name="yes">yes</string>
    <string name="cant_reserve_past">Can not reserve a seat for past time</string>
    <string name="closed">Closed</string>
    <string name="sofa_credit">The sofa icon in our logo was made by</string>
    <string name="from">from</string>
    <string name="credits">Credits</string>
    <string name="about_paragraph">Book a Seat offers a convenient way of reserving seats in the library and viewing the availability of the library in real-time.</string>
    <string name="who_are_we">Who Are We?</string>
    <string name="about_book_a_seat">About Book a Seat</string>
    <string name="and">and</string>
    <string name="contact_us_text">You can contact us at:</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="contact_us">Contact Us</string>
    <string name="mail_address">support@bookaseat.com</string>
    <string name="locationing_disabled_title">Locationing is Disabled</string>
    <string name="locationing_disabled_message">You will not be able to occupy reserved seats while locationing is disabled.</string>
    <string name="update">Update</string>
    <string name="revert">Revert</string>
    <string name="colon">:</string>
    <string name="hyphen">-</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="zero_formatted_2d">00</string>
    <string name="idle_time_limit">Idle Time Limit:</string>
    <string name="max_delay_limit">Max Delay:</string>
    <string name="server_client_id">690987322484-vqmvoioqv08ou1rhm1k3hhnkijlkbrui.apps.googleusercontent.com</string>
    <string name="please_sign_in">Please sign in to proceed:</string>
    <string name="nav_log_out">Log out</string>
    <string name="notification_title">You are leaving the library</string>
    <string name="notification_content" formatted="false">Do you wish to keep your seat?\nTime left: %d minutes and %d seconds</string>
    <string name="notification_content_short">Do you wish to keep your seat?</string>
    <string name="no">No</string>
    <string name="history">History</string>
    <string name="remove">Remove</string>
    <string name="nav_admin_management">Admins Management</string>
    <string name="add">Add</string>
    <string name="new_admin_s_mail">new admin\'s mail</string>
    <string name="current_library_admins">Current library admins:</string>
    <string name="warning_message">For automatic location detection, turn on WiFi</string>
    <string name="minutes">minutes</string>
    <string name="reserved_for_x_minutes" formatted="false">Seat is reserved for the next %d minutes</string>
    <string name="dismiss">DISMISS</string>
    <string name="seat_freed">The seat has been freed</string>
    <string name="reservation_expired">Reservation expired</string>
    <string name="in_library_message">You are in the library!</string>
    <string name="warning_gps_off">enabling GPS is required in order to identify presence in library on Android 6.0.0. Would you like to enable it?</string>
    <string name="warning_presence_not_identified">Presence in library will not be identified until GPS is enabled.</string>
    <string name="next_reservation_exists_message" formatted="false">Next reservation for this seat is between %02d:%02d and %02d:%02d</string>
    <string name="next_reservation_not_exists_message">No future reservations for this seat today, you are free to reserve</string>
</resources>
